--- a/app/views/challenges/external.html.haml
+++ b/app/views/challenges/external.html.haml
@@ -17,6 +17,8 @@
         in 2023.
       %p
         Go old-school with COBOL, cutting edge with Unison or esoteric with Prolog. Explore low-level code with Assembly, expressions with a Lisp or functional with Haskell!
+        %strong.block.font-semibold This month is Functional February. Join the Challenge to learn more!
+
       %p.unsure
         Expand your knowledge. Have fun. Join the community. 100% free.
 
