--- a/app/views/challenges/12in23.html.haml
+++ b/app/views/challenges/12in23.html.haml
@@ -28,7 +28,7 @@
             Earn the Functional February badge for completing and publishing 5 exercises in one of the following languages.
             Consider starting with a language with a syllabus (
             = graphical_icon "concepts", css_class: 'w-[14px] h-[14px] filter-purple inline mx-[-4px]'
-            )
+            ).
 
           - tracks = Track.where(slug: %w[elixir fsharp clojure erlang haskeel ocaml scala sml gleam])
           .grid.grid-cols-8.gap-12.mb-32
@@ -64,7 +64,7 @@
               %strong.font-semibold Protein Translation:
               Practice higher-order functions and pattern matching further
 
-          %h2.text-h3.mt-32.mb-2 Learn from others... 🎥
+          %h2.text-h3.mt-32.mb-4 Learn from others… 🎥
           %p.text-p-large.mb-12
             Throughout the month we'll have interviews — including Jose Valim, the creator of Elixir, and Louis Pilfold, the creator or Gleam — walkthroughs from Exercism track contributors, and live streams of the community solving exercises.
             Subscribe to our
@@ -74,7 +74,7 @@
             to not miss out!
             There is a schedule at the top right of this page.
 
-          %h2.text-h3.mt-32.mb-2 Get Social
+          %h2.text-h3.mt-32.mb-4 Join the conversation… 💬
           %ul.text-p-large.list-disc.pl-16
             %li.mb-4
               Help us compile the
