Add correct copy

--- a/app/views/mailers/mailshots_mailer/functional_february.html.erb
+++ b/app/views/mailers/mailshots_mailer/functional_february.html.erb
@@ -507,26 +507,32 @@ div.preheader {
                 <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
                   <p style="margin-top: 16px;margin-bottom: 0;">Hi <%= @user.handle %>,</p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    <% if @signed_up %> 
-                    Thanks for joining <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">#12in23</span></a>. You're joining thousands of others in exploring new ideas and concepts throughout the year. We're really excited about how the year is going to play out!
-                    <% else %> 
-                    Thousands of people have already signed up for <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">#12in23</span></a>.
-                    It's going to be a really fun journey expanding our programming skills and trying out different languages, <strong style="font-weight:600">so don't miss out!</strong>
-                    As with all of Exercism, it's totally free 🙂
-                    <% end %> 
-                  </p>
-                  <p style="margin-top: 20px;margin-bottom: 0;">
-                    <strong style="font-weight:500">We've now finalised the calendar for the year.</strong>
-                    Each month is going to have a different theme, with interviews from langauge experts (and even language creators!), live streaming of walkthroughs and solving exercises, themed swag, and all sorts of goodies.
-                    I've put together a
-                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=2refhxXqePI"><span style="color:#2e57e8">video talking through the different themes</span></a> - have a watch and let us know which you're most excited for!
+                    Here at Exercism, it's Functional February - a month dedicated to functional programming languages. 
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    The first theme is Functional February, and we're still planning how to make it as fun and useful as possible.
-                    Please <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://forum.exercism.org/t/ideas-needed-what-should-we-do-during-functional-february/3045"><span style="color:#2e57e8">let us know your thoughts in the forum</span></a>.
-                    All ideas are welcome - the wackier the better!
+                    We've put together a really fun month for you, with interviews with language creators (including Jose Valim and Louis Pilfold), tons of live streaming, lots of fun exercise for you to complete, and a whole load of community action going on. As always, it's all free!
                   </p>
+
+                  <p style="margin-top: 20px;margin-bottom: 0;">
+                    You can find all the details on the 
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">#12in23 Challenge page</span></a>
+                    (sign up if you've not already - it's entirely free!)
+                    Or watch our
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=uIFGx1SDnWI"><span style="color:#2e57e8">Intro to Functional February video</span></a>,
+                    which introduces the month and gives a nice overview of some key functional programming concepts - topics like immutability, pattern matching, recursion, first-class pure functions and more.
+                  </p>
+
+                  <p style="margin-top: 15px;margin-bottom: 0;">
+                    <a href="https://www.youtube.com/watch?v=uIFGx1SDnWI" style="display:block; box-shadow: 0px 2px 4px #0F0923">
+                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-welcome-to-functional-february-with-play-icon.jpg" style="width:100%; display:block"/>
+                    </a>
+                  </p>
+
+                  <p style="margin-top: 25px;margin-bottom: 0;">
+                    If you've never tried functional languages before, they're a really eye-opening fun approach to coding. And if you're a functional pro, there's loads to challenge and inspire you here too!
+                  </p>
+
                   <p style="margin-top: 20px;margin-bottom: 0;">
                     Have a great day!
                   </p>
@@ -541,7 +547,7 @@ div.preheader {
               <div style="margin-left: 20px;margin-right: 20px;">
                 <div class="btn btn--shadow btn--large" style="margin-bottom: 20px;">
                   <![if !mso]><a style="border-radius: 4px;display: inline-block;font-size: 16px;font-weight: bold;line-height: 24px;padding: 12px 24px 13px 24px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2);background-color: #2e57e8;font-family: Poppins, Trebuchet MS, Avenir, Segoe UI, sans-serif;" href="https://exercism.org/challenges/12in23">
-                    GO TO #12IN23
+                    GO TO FUNCTIONAL FEBRUARY
                     <span style="font-size:20px;margin-left:5px">➡</span>
                   </a><![endif]>
               </div>
