--- a/app/views/challenges/12in23.html.haml
+++ b/app/views/challenges/12in23.html.haml
@@ -41,7 +41,7 @@
                 .text-h6= track.title.gsub("Standard ML", "SML")
 
           %p.text-p-large.mb-12
-            You can solve any exercises to get the badge, but we recommend the following as interesting challenges to approach from a functional perspective:
+            You can solve any exercises in these tracks to get the badge, but we recommend the following as interesting challenges to approach from a functional perspective:
           %ul.text-p-large.mb-12
             %li.mb-2
               = image_tag "#{Exercism.config.website_icons_host}/exercises/hamming.svg", class: "w-[25px] inline"
