Highlight Jose on Dashboard

--- a/app/views/challenges/12in23.html.haml
+++ b/app/views/challenges/12in23.html.haml
@@ -105,8 +105,9 @@
                 Feb 9th, 13.00.
                 Jeremie Gillet (Gleam live coding).
               %li
-                Feb 9th, 16.30.
-                %strong.font-semibold Interview with Jose Valim, creator of Elixir.
+                = link_to "https://www.youtube.com/watch?v=LknqlTouTKg", class: "underline" do
+                  Feb 9th, 16.30.
+                  %strong.font-semibold{ class: "!text-lightBlue" } Interview with Jose Valim, creator of Elixir.
 
               %li
                 Feb 11th, 00.00.
