Update email copy

--- a/app/views/mailers/mailshots_mailer/upcoming_jose_valim.html.erb
+++ b/app/views/mailers/mailshots_mailer/upcoming_jose_valim.html.erb
@@ -507,8 +507,9 @@ div.preheader {
                 <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
                   <p style="margin-top: 16px;margin-bottom: 0;">Hi <%= @user.handle %>,</p>
                   <p style="margin-top: 16px;margin-bottom: 0;">
-                    This week as part of Functional February we've got a really exciting interview planned with José Valim, the creator of Elixir.
-                    It's on Thursday (Feb 9th) at 16:30 UTC and you can watch it on 
+                    On Thursday at 16:30 UTC, I'm going to be chatting to
+                    <strong style="font-weight:600">José Valim, the creator of Elixir</strong>, exploring Elixir, functional programming, and putting your questions to him!
+                    You can watch it on
                     <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=LknqlTouTKg"><span style="color:#2e57e8">YouTube</span></a>
                     or
                     <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://twitch.tv/exercismlive"><span style="color:#2e57e8">Twitch</span></a>.
@@ -516,8 +517,8 @@ div.preheader {
 
                   <p style="margin-top: 16px;margin-bottom: 0;">
                     We're going to be exploring why José decided to make Elixir a functional language and how that's impacted it's evolution and growth.
-                    The second half of session will be an AMA ("ask me anything"), so 
-                    <strong>you have the opportunity to ask José questions</strong>. 
+                    The second half of session will be an AMA ("ask me anything"), so
+                    <strong style="font-weight:600">you have the opportunity to ask José questions</strong>.
                     Simply join the YouTube or Twitch streams and ask a question in the chat.
                   </p>
 
@@ -528,9 +529,9 @@ div.preheader {
                   </p>
 
                   <p style="margin-top: 25px;margin-bottom: 0;">
-                    We've also got live streams happening throughout the month and another featured interview with Louis Pilfold, the creator of Gleam, soon too. So keep an eye on the 
+                    The interview is part of Functional February and #12in23. We've got lots of live streams happening throughout the month and another featured interview with Louis Pilfold, the creator of Gleam, soon too. So keep an eye on the
                     <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">#12in23 page</span></a>
-                    for more details. Everything is free and just for a good cause! 🙂
+                    for more details. Everything on Exercism is free and designed to be fun and educational 🙂
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
@@ -579,7 +580,7 @@ div.preheader {
 
                             <div style="margin-left: 20px;margin-right: 20px;margin-bottom: 24px;">
                               <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
-                                <p style="margin-top: 0;margin-bottom: 20px;">You're receiving this because you've previously signed up to <%= link_to "Exercism", root_url, style: "color: #2E57E8; font-weight:500" %> (the <strong style="font-weight:500">free, not-for-profit programming education platform</strong>) and are subscribed to our site update emails, where we send occasional updates when we add improvements to the platform.</p>
+                                <p style="margin-top: 0;margin-bottom: 20px;">You're receiving this because you've previously signed up to <%= link_to "Exercism", root_url, style: "color: #2E57E8; font-weight:500" %> (the <strong style="font-weight:500">free, not-for-profit programming education platform</strong>) and are subscribed to our update emails, where we let you know about new things on the site.</p>
                                 <p style="margin-top: 0;margin-bottom: 20px;">
                                   You can
                                   <%= link_to "unsubscribe from this email", unsubscribe_url(token: @user.communication_preferences.token, key: @email_communication_preferences_key), style: "color: #2E57E8; font-weight:500" %>
